# slangy

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
cmake/: add_slang_target.cmake  bin2h.cmake  bin_file_to_header.cmake  fetchSlang.cmake  findSlang.cmake  slang_compiler.cmake
examples/: CMakeLists.txt  runComputeShader.cpp
examples/shaders/: shader_lib.slang  shader_main.slang
libs/: CMakeLists.txt
libs/slangy/: CMakeLists.txt
libs/slangy/cmake/: slangyConfig.cmake.in
libs/slangy/include/slangy/: error.hpp  error_handling.hpp  slangy.hpp  slangy.inl
libs/slangy/include/slangy/api/: api.hpp
libs/slangy/include/slangy/com/: ComPtr.hpp  ComPtr.inl  Implements.hpp  Implements.inl  factories.hpp  helpers.hpp  helpers.inl
libs/slangy/include/slangy/gfx/: DebugCallback.hpp  gfx.hpp
libs/slangy/include/slangy/impl/: SlangIRBlob.hpp
libs/slangy/include/slangy/utils/: DiagnosticLogger.hpp  SlangBlob.hpp  results.hpp
libs/slangy/tests/: CMakeLists.txt  test_Implements.cpp  test_build_api.cpp  test_shader.slang
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: testPackageApp.cpp
